--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
 
       <section>
         <div id="title">
-          <h1>Skaclmbr.github.io</h1>
-          <p>Scott's Website</p>
+          <h1>Scott K Anderson</h1>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/skaclmbr">skaclmbr</a></span>
           <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
