--- a/testing_landing.html
+++ b/testing_landing.html
@@ -3,11 +3,15 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8">
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
-    <link href='http://fonts.googleapis.com/css?family=Alef:400,700' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Acme' rel='stylesheet' type='text/css'>    <link rel="stylesheet" href="stylesheets/main.css">
-    <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:200,400,700' rel='stylesheet' type='text/css'>    <link rel="stylesheet" href="stylesheets/main.css">
+    <!--<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>-->
+	<!--<link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:400,700' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Chivo:400,900' rel='stylesheet' type='text/css'>-->
+	<link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,700' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Neuton:700' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Exo:700,900' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Alegreya+SC:700' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" href="stylesheets/main.css">
 </head>
 <body>
 <div id="header">
@@ -15,8 +19,9 @@
     
 </div>
 <div id="content">
-Here is the content.    
-</div>
+<div id="teaser-quote"></div>
+<h2>Life</h2>
+father, tinkerer, biologist, and (sometime) reluctant technophile</div>
 
 </body>
 </html>
