--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Skaclmbr.github.io by skaclmbr</title>
+    <title>skaclmbr.github.io by skaclmbr</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -31,14 +31,15 @@
           <h1>Scott K Anderson</h1>
           <hr>
           <span class="credits left"><a href="https://github.com/skaclmbr">skaclmbr</a></span>
-          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
+          <span class="credits right">Hosted on GitHub Pages </span>
         </div>
 
         <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>skaclmbr on github</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>This is a space for me to try out ideas and experiments on the web. Follow along if you'd like.</p>
 
+<!--
 <pre><code>$ cd your_repo_root/repo_name
 $ git fetch origin
 $ git checkout gh-pages
@@ -68,7 +69,6 @@ $ git checkout gh-pages
       </section>
 
     </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-    
+-->  
   </body>
 </html>
