--- a/coffee.html
+++ b/coffee.html
@@ -35,6 +35,12 @@
 				verb:"smoking",
 				amtwk: [1,2,3,4,5],
 				cost: 5.45
+				},
+			pet:{
+				unit:"dog",
+				verb:"feeding a pet",
+				amtwk: [1,2,3,4,5,6,7],
+				cost: .5
 				}
 			};
 		
