added link to retirement page

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 <a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>skaclmbr on github</h3>
 
 <p>This is a space for me to try out ideas and experiments on the web. Follow along if you'd like.</p>
+<p><a href="/coffee.html">Retirement vice cost</a></p>
 
 <!--
 <pre><code>$ cd your_repo_root/repo_name
